syntax = "proto3";

package api.admin.user;

option go_package = "github.com/starudream/go-lib/example/v2/api/admin/user";

import "validate/validate.proto";

// 用户
message User {
  string id = 1;
  // 用户名
  string username = 2;
}

message AddUserReq {
  // 用户名
  string username = 2 [(validate.rules).string = { min_len: 1 }];
  // 密码
  string password = 3;
}

message GetUserReq {
  oneof x {
    option (validate.required) = true;

    string id = 1;
    // 用户名
    string username = 2;
  }
}
